--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,8 +3,8 @@ version: "3.8"
 services:
   mariadb_init:
     depends_on:
-      mariadb:
-        condition: service_healthy
+      - mariadb
+        #condition: service_healthy
 
   ca:
     volumes:
@@ -21,8 +21,8 @@ services:
       - ./cache:/cache
       - smartgit_run:/var/run/smartgit
     depends_on:
-      mariadb:
-        condition: service_healthy
+      - mariadb
+        #condition: service_healthy
 
   php-fpm:
     volumes:
