Removed AUR branding on Cgit interface for packages

--- a/docker/config/nginx.conf
+++ b/docker/config/nginx.conf
@@ -66,6 +66,9 @@ http {
             uwsgi_modifier1 9;
             uwsgi_param CGIT_CONFIG /etc/cgitrc;
             uwsgi_pass uwsgi://cgit-php;
+
+            sub_filter_once off;
+            sub_filter 'AUR' 'MPR';
         }
 
         location ~ ^/[^/]+\.php($|/) {
@@ -134,6 +137,9 @@ http {
             uwsgi_modifier1 9;
             uwsgi_param CGIT_CONFIG /etc/cgitrc;
             uwsgi_pass uwsgi://cgit-fastapi;
+
+            sub_filter_once off;
+            sub_filter 'AUR' 'MPR';
         }
 
         location @proxy_to_app {
