Various changes to make project more modular [TEST SKIP]
- Added all files in 'conf/' to '.dockerignore' file.
- Modified Docker Compose files to pass needed 'conf/' files to containers.
- Moved all healthchecks to 'docker-compose.override.yml'
- Moved all volume mounts to 'docker-compose.yml'
- Updated CI script to automatically publish changes onto live instance.
- Fixed CSS coloring issues (changed leftover blue colors to orange).
- Fixed CSS path used by CGit.
- Spaced out messages in fotter of CGit.
- Added config options to 'conf/config.dev' and environment variables for email setup.
- Added environment variables to set the database username and password.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,10 @@
 */*.mo
+/data/
 conf/config
 conf/config.sqlite
 conf/config.sqlite.defaults
+conf/config.dev
+conf/config.defaults
 conf/docker
 conf/docker.defaults
+conf/docker.env
