--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,29 +29,26 @@ services:
     init: true
     entrypoint: /docker/ca-entrypoint.sh
     command: echo
+    volumes:
+      - ./cache:/cache
 
   memcached:
     image: mprweb:latest
     init: true
     command: /docker/scripts/run-memcached.sh
-    healthcheck:
-      test: "bash /docker/health/memcached.sh"
-      interval: 3s
  
   redis:
     image: mprweb:latest
     init: true
     entrypoint: /docker/redis-entrypoint.sh
     command: /docker/scripts/run-redis.sh
-    healthcheck:
-      test: "bash /docker/health/redis.sh"
-      interval: 3s
     ports:
       - "16379:6379"
 
   mariadb:
     image: mprweb:latest
     init: true
+    env_file: ./conf/docker.env
     entrypoint: /docker/mariadb-entrypoint.sh
     command: /usr/bin/mysqld_safe --datadir=/var/lib/mysql
     ports:
@@ -62,9 +59,6 @@ services:
       - mariadb_run:/var/run/mysqld # Bind socket in this volume.
       - ./data/mariadb_data:/var/lib/mysql
       - ./conf:/aurweb/conf
-    healthcheck:
-      test: "bash /docker/health/mariadb.sh"
-      interval: 3s
 
   mariadb_init:
     image: mprweb:latest
@@ -72,10 +66,10 @@ services:
     entrypoint: /docker/mariadb-init-entrypoint.sh
     command: echo "MariaDB tables initialized."
     volumes:
+      - ./conf:/aurweb/conf
       - mariadb_run:/var/run/mysqld
     depends_on:
-      mariadb:
-        condition: service_healthy
+      - mariadb
 
   git:
     image: mprweb:latest
@@ -86,13 +80,12 @@ services:
     command: /docker/scripts/run-sshd.sh
     ports:
       - "2222:2222"
-    healthcheck:
-      test: "bash /docker/health/sshd.sh"
-      interval: 3s
     depends_on:
-      mariadb_init:
-        condition: service_started
+      - mariadb_init
     volumes:
+      - ./conf:/aurweb/conf
+      - ./data/git_data:/aurweb/aur.git
+      - ./cache:/cache
       - mariadb_run:/var/run/mysqld
 
   smartgit:
@@ -102,9 +95,12 @@ services:
       - AUR_CONFIG=/aurweb/conf/config
     entrypoint: /docker/smartgit-entrypoint.sh
     command: /docker/scripts/run-smartgit.sh
-    healthcheck:
-      test: "bash /docker/health/smartgit.sh"
-      interval: 3s
+    depends_on:
+      - mariadb
+    volumes:
+      - ./data/git_data:/aurweb/aur.git
+      - ./cache:/cache
+      - smartgit_run:/var/run/smartgit
 
   cgit-php:
     image: mprweb:latest
@@ -114,15 +110,13 @@ services:
       - CGIT_CLONE_PREFIX=${AURWEB_PHP_PREFIX}
     entrypoint: /docker/cgit-entrypoint.sh
     command: /docker/scripts/run-cgit.sh 3000
-    healthcheck:
-      test: "bash /docker/health/cgit.sh 3000"
-      interval: 3s
-    depends_on:
-      git:
-        condition: service_healthy
     ports:
       - "13000:3000"
+    depends_on:
+      - git
     volumes:
+      - ./conf/cgitrc.proto:/aurweb/conf/cgitrc.proto
+      - ./web/html:/aurweb/web/html
       - ./data/git_data:/aurweb/aur.git
 
   cgit-fastapi:
@@ -133,15 +127,13 @@ services:
       - CGIT_CLONE_PREFIX=${AURWEB_FASTAPI_PREFIX}
     entrypoint: /docker/cgit-entrypoint.sh
     command: /docker/scripts/run-cgit.sh 3000
-    healthcheck:
-      test: "bash /docker/health/cgit.sh 3000"
-      interval: 3s
     depends_on:
       - git
-        #condition: service_healthy
     ports:
       - "13001:3000"
     volumes:
+      - ./conf/cgitrc.proto:/aurweb/conf/cgitrc.proto
+      - ./web/html:/aurweb/web/html
       - ./data/git_data:/aurweb/aur.git
 
   cron:
@@ -152,42 +144,46 @@ services:
     entrypoint: /docker/cron-entrypoint.sh
     command: /docker/scripts/run-cron.sh
     depends_on:
-      mariadb_init:
-        condition: service_started
+      - mariadb_init
     volumes:
       - mariadb_run:/var/run/mysqld
+      - ./conf:/aurweb/conf
       - ./data/archives:/var/lib/aurweb/archives
 
   php-fpm:
     image: mprweb:latest
     init: true
+    env_file: ./conf/docker.env
     environment:
       - AUR_CONFIG=/aurweb/conf/config
       - AURWEB_PHP_PREFIX=${AURWEB_PHP_PREFIX}
       - AURWEB_SSHD_PREFIX=${AURWEB_SSHD_PREFIX}
     entrypoint: /docker/php-entrypoint.sh
     command: /docker/scripts/run-php.sh
-    healthcheck:
-      test: "bash /docker/health/php.sh"
-      interval: 3s
     depends_on:
-      ca:
-        condition: service_started
-      git:
-        condition: service_healthy
-      memcached:
-        condition: service_healthy
-      cron:
-        condition: service_started
+      - ca
+      - git
+      - memcached
+      - cron
     volumes:
       - mariadb_run:/var/run/mysqld
       - ./data/archives:/var/lib/aurweb/archives
+      - ./cache:/cache
+      - ./conf:/aurweb/conf
+      - ./aurweb:/aurweb/aurweb
+      - ./migrations:/aurweb/migrations
+      - ./test:/aurweb/test
+      - ./web/html:/aurweb/web/html
+      - ./web/template:/aurweb/web/template
+      - ./web/lib:/aurweb/web/lib
+      - ./templates:/aurweb/templates
     ports:
       - "19000:9000"
 
   fastapi:
     image: mprweb:latest
     init: true
+    env_file: ./conf/docker.env
     environment:
       - AUR_CONFIG=conf/config
       - FASTAPI_BACKEND=${FASTAPI_BACKEND}
@@ -197,20 +193,22 @@ services:
       - PROMETHEUS_MULTIPROC_DIR=/tmp_prometheus
     entrypoint: /docker/fastapi-entrypoint.sh
     command: /docker/scripts/run-fastapi.sh "${FASTAPI_BACKEND}"
-    healthcheck:
-      test: "bash /docker/health/fastapi.sh ${FASTAPI_BACKEND}"
-      interval: 3s
     depends_on:
-      ca:
-        condition: service_started
-      git:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      cron:
-        condition: service_started
+    - ca
+    - git
+    - redis
+    - cron
     volumes:
       - mariadb_run:/var/run/mysqld
+      - ./cache:/cache
+      - ./conf:/aurweb/conf
+      - ./aurweb:/aurweb/aurweb
+      - ./migrations:/aurweb/migrations
+      - ./test:/aurweb/test
+      - ./web/html:/aurweb/web/html
+      - ./web/template:/aurweb/web/template
+      - ./web/lib:/aurweb/web/lib
+      - ./templates:/aurweb/templates
     ports:
       - "18000:8000"
 
@@ -224,22 +222,21 @@ services:
     ports:
       - "8443:8443" # PHP
       - "8444:8444" # FastAPI
-    healthcheck:
-      test: "bash /docker/health/nginx.sh"
-      interval: 3s
     depends_on:
-      cgit-php:
-        condition: service_healthy
-      cgit-fastapi:
-        condition: service_healthy
-      smartgit:
-        condition: service_healthy
-      fastapi:
-        condition: service_healthy
-      php-fpm:
-        condition: service_healthy
+      - cgit-php
+      - cgit-fastapi
+      - smartgit
+      - fastapi
+      - php-fpm
     volumes:
+      - ./conf:/aurweb/conf
       - ./data/archives:/var/lib/aurweb/archives
+      - ./data/git_data:/aurweb/aur.git
+      - ./cache:/cache
+      - ./logs:/var/log/nginx
+      - ./web/html:/aurweb/web/html
+      - ./web/template:/aurweb/web/template
+      - ./web/lib:/aurweb/web/lib
 
   sharness:
     image: mprweb:latest
@@ -249,14 +246,12 @@ services:
       - AUR_CONFIG=conf/config.sqlite
     entrypoint: /docker/test-sqlite-entrypoint.sh
     command: /docker/scripts/run-sharness.sh
+    depends_on:
+      - git
     stdin_open: true
     tty: true
-    depends_on:
-      git:
-        condition: service_healthy
     volumes:
       - ./data/git_data:/aurweb/aur.git
-      
       - ./cache:/cache
       - ./aurweb:/aurweb/aurweb
       - ./migrations:/aurweb/migrations
@@ -279,12 +274,11 @@ services:
     stdin_open: true
     tty: true
     depends_on:
-      mariadb_init:
-        condition: service_started
+      - mariadb_init
     volumes:
       - mariadb_run:/var/run/mysqld
+      - ./conf:/aurweb/conf
       - ./data/git_data:/aurweb/aur.git
-      
       - ./cache:/cache
       - ./aurweb:/aurweb/aurweb
       - ./migrations:/aurweb/migrations
@@ -308,7 +302,7 @@ services:
     tty: true
     volumes:
       - ./data/git_data:/aurweb/aur.git
-      
+      - ./conf:/aurweb/conf
       - ./cache:/cache
       - ./aurweb:/aurweb/aurweb
       - ./migrations:/aurweb/migrations
@@ -331,12 +325,10 @@ services:
     stdin_open: true
     tty: true
     depends_on:
-      mariadb_init:
-        condition: service_started
+      - mariadb_init
     volumes:
       - mariadb_run:/var/run/mysqld
       - ./data/git_data:/aurweb/aur.git
-      
       - ./cache:/cache
       - ./aurweb:/aurweb/aurweb
       - ./migrations:/aurweb/migrations
