--- a/conf/docker.env
+++ b/conf/docker.env
@@ -1,11 +1,2 @@
-DB_USER='mpr'
-DB_PASSWORD='mpr'
 AURWEB_FASTAPI_PREFIX='https://localhost:8444'
-#SMTP_SERVER="localhost"
-#SMTP_PORT="25"
-#SMTP_USE_SSL="0"
-#SMTP_USE_STARTTLS="0"
-#SMTP_USER=""
-#SMTP_PASSWORD=""
-#SMTP_SENDER=""
-#SMTP_REPLY_TO=""
+CONFIG_FILE='conf/config.dev'
