Added option to disable SSH key generation [TEST SKIP]
Also added host mounts for SSH keys in deployed instance so keys aren't regenerated each time we republish.

--- a/conf/docker.env
+++ b/conf/docker.env
@@ -1,2 +1,4 @@
+# For boolean values, '0' means false, and '1' means true.
 AURWEB_FASTAPI_PREFIX='https://localhost:8444'
 CONFIG_FILE='conf/config.dev'
+GENERATE_SSH_KEYS='1'
