--- a/docker/config/nginx.conf
+++ b/docker/config/nginx.conf
@@ -68,7 +68,8 @@ http {
             uwsgi_pass uwsgi://cgit-php;
 
             sub_filter_once off;
-            sub_filter 'AUR' 'MPR';
+            sub_filter 'AUR :' 'MPR :';
+            sub_filter 'AUR Package Repositories' 'MPR Package Repositories';
         }
 
         location ~ ^/[^/]+\.php($|/) {
