--- a/conf/docker.env
+++ b/conf/docker.env
@@ -1,4 +1,4 @@
 # For boolean values, '0' means false, and '1' means true.
 AURWEB_FASTAPI_PREFIX='https://localhost:8444'
-CONFIG_FILE='conf/config.dev'
+CONFIG_FILE='conf/config.defaults'
 GENERATE_SSH_KEYS='1'
