--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,6 @@ services:
     volumes:
       - mariadb_run:/var/run/mysqld # Bind socket in this volume.
       - ./data/mariadb_data:/var/lib/mysql
-      - ./conf:/aurweb/conf
 
   mariadb_init:
     image: mprweb:latest
@@ -66,7 +65,8 @@ services:
     entrypoint: /docker/mariadb-init-entrypoint.sh
     command: echo "MariaDB tables initialized."
     volumes:
-      - ./conf:/aurweb/conf
+      - ./conf/config.defaults:/aurweb/conf/config.defaults
+      - ./conf/config.dev:/aurweb/conf/config.dev
       - mariadb_run:/var/run/mysqld
     depends_on:
       - mariadb
@@ -84,7 +84,8 @@ services:
     depends_on:
       - mariadb_init
     volumes:
-      - ./conf:/aurweb/conf
+      - ./conf/config.defaults:/aurweb/conf/config.defaults
+      - ./conf/config.dev:/aurweb/conf/config.dev
       - ./data/git_data:/aurweb/aur.git
       - ./cache:/cache
       - mariadb_run:/var/run/mysqld
@@ -149,7 +150,8 @@ services:
       - mariadb_init
     volumes:
       - mariadb_run:/var/run/mysqld
-      - ./conf:/aurweb/conf
+      - ./conf/config.defaults:/aurweb/conf/config.defaults
+      - ./conf/config.dev:/aurweb/conf/config.dev
       - ./data/archives:/var/lib/aurweb/archives
 
   php-fpm:
@@ -171,7 +173,8 @@ services:
       - mariadb_run:/var/run/mysqld
       - ./data/archives:/var/lib/aurweb/archives
       - ./cache:/cache
-      - ./conf:/aurweb/conf
+      - ./conf/config.defaults:/aurweb/conf/config.defaults
+      - ./conf/config.dev:/aurweb/conf/config.dev
       - ./aurweb:/aurweb/aurweb
       - ./migrations:/aurweb/migrations
       - ./test:/aurweb/test
@@ -203,7 +206,8 @@ services:
     volumes:
       - mariadb_run:/var/run/mysqld
       - ./cache:/cache
-      - ./conf:/aurweb/conf
+      - ./conf/config.defaults:/aurweb/conf/config.defaults
+      - ./conf/config.dev:/aurweb/conf/config.dev
       - ./aurweb:/aurweb/aurweb
       - ./migrations:/aurweb/migrations
       - ./test:/aurweb/test
@@ -232,7 +236,8 @@ services:
       - fastapi
       - php-fpm
     volumes:
-      - ./conf:/aurweb/conf
+      - ./conf/config.defaults:/aurweb/conf/config.defaults
+      - ./conf/config.dev:/aurweb/conf/config.dev
       - ./data/archives:/var/lib/aurweb/archives
       - ./data/git_data:/aurweb/aur.git
       - ./cache:/cache
@@ -282,7 +287,8 @@ services:
       - mariadb_init
     volumes:
       - mariadb_run:/var/run/mysqld
-      - ./conf:/aurweb/conf
+      - ./conf/config.defaults:/aurweb/conf/config.defaults
+      - ./conf/config.dev:/aurweb/conf/config.dev
       - ./data/git_data:/aurweb/aur.git
       - ./cache:/cache
       - ./aurweb:/aurweb/aurweb
@@ -307,7 +313,8 @@ services:
     tty: true
     volumes:
       - ./data/git_data:/aurweb/aur.git
-      - ./conf:/aurweb/conf
+      - ./conf/config.defaults:/aurweb/conf/config.defaults
+      - ./conf/config.dev:/aurweb/conf/config.dev
       - ./cache:/cache
       - ./aurweb:/aurweb/aurweb
       - ./migrations:/aurweb/migrations
