--- a/docker/config/nginx.conf
+++ b/docker/config/nginx.conf
@@ -140,7 +140,8 @@ http {
             uwsgi_pass uwsgi://cgit-fastapi;
 
             sub_filter_once off;
-            sub_filter 'AUR' 'MPR';
+            sub_filter 'AUR :' 'MPR :';
+            sub_filter 'AUR Package Repositories' 'MPR Package Repositories';
         }
 
         location @proxy_to_app {
