Added missing smartgit volume mount to NGINX container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -245,6 +245,7 @@ services:
       - ./web/html:/aurweb/web/html
       - ./web/template:/aurweb/web/template
       - ./web/lib:/aurweb/web/lib
+      - smartgit_run:/var/run/smartgit
 
   sharness:
     image: mprweb:latest
