Fixed generation of SSH keys in MPR deployments [TEST SKIP]

--- a/docker-compose.mpr.yml
+++ b/docker-compose.mpr.yml
@@ -10,6 +10,7 @@ services:
             - AUR_CONFIG=/aurweb/conf/config
             - SSH_CMDLINE=${SSH_CMDLINE:-ssh ssh://aur@localhost:2222}
             - AUR_CONFIG_IMMUTABLE=1
+            - GENERATE_SSH_KEYS=0
         ports:
             - "22:2222"
         volumes:
