--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,7 +92,7 @@ services:
     init: true
     env_file: ./conf/docker.env
     environment:
-      - AUR_CONFIG=/aurweb/conf/config
+      - AUR_CONFIG=/aurweb/conf/config.dev
       - SSH_CMDLINE=${SSH_CMDLINE:-ssh ssh://aur@localhost:2222}
       - AUR_CONFIG_IMMUTABLE=${AUR_CONFIG_IMMUTABLE:-0}
     entrypoint: /docker/git-entrypoint.sh
