Fixed syntax error in 'docker-compose.mpr.yml' [TEST SKIP]

--- a/docker-compose.mpr.yml
+++ b/docker-compose.mpr.yml
@@ -41,5 +41,5 @@ services:
 
     cron:
         environment:
-            AUR_CONFIG=conf/config
-            AUR_CONFIG_IMMUTABLE=1
+            - AUR_CONFIG=conf/config
+            - AUR_CONFIG_IMMUTABLE=1
