Fixed volume mount for Git in deployed instance [TEST SKIP]

--- a/docker-compose.mpr-override.yml
+++ b/docker-compose.mpr-override.yml
@@ -12,3 +12,11 @@ services:
   cgit-fastapi:
     volumes:
       - ./data/git_data:/aurweb/aur.git
+
+  git:
+    volumes:
+      - ./data/git_data:/aurweb/aur.git
+      - ./data:/aurweb/data
+      - /etc/ssh/ssh_host_ecdsa_key:/etc/ssh/ssh_host_ecdsa_key:ro
+      - /etc/ssh/ssh_host_ed25519_key:/etc/ssh/ssh_host_ed25519_key:ro
+      - /etc/ssh/ssh_host_rsa_key:/etc/ssh/ssh_host_rsa_key:ro
