--- a/docker-compose.mpr-override.yml
+++ b/docker-compose.mpr-override.yml
@@ -14,6 +14,8 @@ services:
       - ./data/git_data:/aurweb/aur.git
 
   git:
+    ports:
+      - "22:2222"
     volumes:
       - ./data/git_data:/aurweb/aur.git
       - ./data:/aurweb/data
