Fixed incorrect volume mount for Git folder in 'smartgit' in deployed instance [TEST SKIP]

--- a/docker-compose.mpr-override.yml
+++ b/docker-compose.mpr-override.yml
@@ -22,3 +22,9 @@ services:
       - /etc/ssh/ssh_host_ecdsa_key:/etc/ssh/ssh_host_ecdsa_key:ro
       - /etc/ssh/ssh_host_ed25519_key:/etc/ssh/ssh_host_ed25519_key:ro
       - /etc/ssh/ssh_host_rsa_key:/etc/ssh/ssh_host_rsa_key:ro
+
+  smartgit:
+    volumes:
+      - ./data/git_data:/aurweb/aur.git
+      - ./data:/data
+      - smartgit_run:/var/run/smartgit
