--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 FASTAPI_BACKEND="uvicorn"
 FASTAPI_WORKERS=2
 MARIADB_SOCKET_DIR="/var/run/mysqld/"
-AURWEB_PHP_PREFIX=https://localhost:8443
-AURWEB_FASTAPI_PREFIX=https://localhost:8444
+AURWEB_PHP_PREFIX=http://localhost:8443
+AURWEB_FASTAPI_PREFIX=http://localhost:8080
 AURWEB_SSHD_PREFIX=ssh://aur@localhost:2222
 GIT_DATA_DIR="./aur.git/"
 TEST_RECURSION_LIMIT=10000
