Ported '/account/{username}/' and '/account/{username}/comments'.
Also redid JS for comments and the header search box.

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ doc/rpc.html
 
 # Ignore .python-version file from Pyenv
 .python-version
+
+# Compiled SCSS files.
+media/css/style.css
+media/css/style.css.map
